Disable direct routing of mouse events for RenderWidgetHostViewGuest

When --isolate-extensions became enabled by default, a consequence is
that it turned on by default direct browser-side routing of mouse events
to webviews, even though RenderWidgetHostViewGuest has not been
modified to support that. This has resulted in multiple input-related
regressions.

This CL disables direct routing to fix those problems. Mouse events
will once again be sent to the embedding renderer process and returned
to the BrowserPluginGuest to be dispatched to the guest.

BUG=648921
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_site_isolation

Review-Url: https://codereview.chromium.org/2354283003
Cr-Commit-Position: refs/heads/master@{#420168}

Former-commit-id: 7dfa73aa45e87390c8d20ca31ac69a1cf5a91e0e